--- a/src/styles/Content.module.scss
+++ b/src/styles/Content.module.scss
@@ -1,5 +1,6 @@
 .container {
     padding: 6rem 4rem;
+    overflow-y: scroll;
 }
 
 .date {
